src/assets/css/QnAMaker.css
*:focus{
    -webkit-box-shadow: none!important;
    box-shadow: none!important;
    outline: 0;
}

#qna {
    margin-top: 10px;
}

#search {
    padding: 10px;
}

#question {
    padding: 10px;
}

#title {
    margin-top: 10px;
    margin-bottom: 20px;
}

.form-search {
    display: inline-block;
}

.form-search input {
    width: 90%;
}

input#keyword-input {
    margin-bottom: 10px;
}

#search button {
    width: 100%;
    /* background-color: #F76B1C;
    background-image: linear-gradient(90deg, #F76B1C 0%, #FAD961 100%);     */
    background-color: tomato;
    border: none;
}

#search button:hover {
    background-color: #f9e41a;
    color: black;
    /* background-color: #FAD961;
    background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);    */
}

#search button:focus {
    -webkit-box-shadow: none!important;
    box-shadow: none!important;
    outline: 0;
}

#qoutes {
    padding: 13px;
}

#maker {
    padding-top: 10px;
    padding-right: 20px;
    padding-left: 20px;
    padding-bottom: 20px;
}

#preview {
    padding-right: 20px;
    padding-left: 20px;
    padding-bottom: 20px;
}

.my-0 textarea {
    margin-bottom: 10px;
}

.my-1 input{
    margin-bottom: 10px;
}

#btn-submit {
    margin-top: 50px;
    margin-bottom: 20px;
}

#btn-submit button {
    width: 200px;
    /* background-color: #F76B1C;
    background-image: linear-gradient(90deg, #F76B1C 0%, #FAD961 100%);     */
    background-color: tomato;
    border: none;
    text-align: center;
}

#btn-submit button:hover {
    background-color: #f9e41a;
    color: black;
    /* background-color: #FAD961;
    background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);  */
}

button#openMessages {
    cursor: pointer;
    position: fixed;
    bottom: 23px;
    right: 28px;

    width: 60px;
    height: 60px;
    border-radius: 100%;

    /* background-color: #F76B1C;
    background-image: linear-gradient(90deg, #F76B1C 0%, #FAD961 100%); */
    background-color: tomato;
    border: none;
}

.messages {
    cursor: pointer;
    position: fixed;
    bottom: 23px;
    right: 28px;
}

button#openMessages i {
    font-size: 30px;
}

#box-mess {
    width: 300px;
    height: 400px;
    background-color: white;
    margin-bottom: 70px;
    border-radius: 10px;
    border: 1px solid #e8e8e8;
}

#title-box {
    width: 100%;
    height: 40px;
    background-color: tomato;
    color: white;
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
    text-indent: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 10%;
}

#show-mess {
    height: 80%;
    overflow: hidden;
    border-bottom: 1px solid #e8e8e8;
    font-size: 14px;
}

#send {
    height: 10%;
    width: 100%;
    padding: 0;
    margin: 0;
}

#send button {
    border-radius: 0%;
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
    background-color: tomato;
    border: none;
}

#send button:hover {
    background-color: #f9e41a;
}

#send button:hover i {
    color: #000;
}

#send input {
    border: none;
}

#show-mess {
    overflow-y: scroll;
}

.bot-send {
    margin-right: 10px;
    margin-left: 10px;
    margin-top: 10px;
    background-color: #ecf0f1;
    padding-top: 10px;
    padding-bottom: 10px;
    border-radius: 10px;
}

.bot-send img {
    width: 100%;
    border-radius: 100%;
}

.ava.col-3 {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 10px;
}

.ava-people.col-3 {
    display: flex;
    align-items: center;
    justify-content: center;
}

.text.col-9 {
    margin-top: auto 0;
}

.people-text.col-9 {
    margin-top: auto 0;
}

.text p {
    padding: 0;
    margin: 0;
}

.people-text p {
    margin: 0;
    padding: 0;
}

.people-send {
    margin-right: 10px;
    margin-left: 10px;
    margin-top: 10px;
    background-color: #ecf0f1;
    padding-top: 10px;
    padding-bottom: 10px;
    border-radius: 10px;
}

.people-send img {
    width: 100%;
    border-radius: 100%;
}

.people-text {
    margin: 10px;
}

.question-list {
    height: 627px;
    overflow-y: scroll;
}

.question-list td {
    word-wrap:break-word;
}


/* Usually bottom */
#btn-submit {
    text-align: center;
}

